# geistererbennicht

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  letterselector.cpp  letterselector.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp
cmake/: AddGoogleTest.cmake
data/: pics.qrc
docs/: Changelog.md
docs/manuals/: footer.md.in  geistererbennicht_de.md  geistererbennicht_en.md
src/: CMakeLists.txt  letterselector.cpp  letterselector.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  version.hpp.in
tests/: CMakeLists.txt  letterselector.test.cpp  letterselector.test.hpp  main.cpp
